{
    "name": "GanshinActions",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "45103af7-4fbc-4d17-9579-dedab109dbae",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "4e31bfb3-3a2a-42a0-9539-81e1e289bb60",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "a75d36a8-8cde-4a7d-92c5-4992f2fc144f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "94f95cb6-b4a7-49a0-bd99-832c39b4886b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "bba65bc1-9ba8-4298-a388-4d316e9600f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "de74ed53-5157-4bed-b8d5-25504c1ae1ab",
                    "expectedControlType": "Axis",
                    "processors": "Normalize(min=-1,max=1)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Roll",
                    "type": "PassThrough",
                    "id": "45bfd80f-33d5-4f54-8ab5-5ac39c067e90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BaseSkill",
                    "type": "Button",
                    "id": "cbcf89e7-54c8-46de-86b3-f8f4dc8daf0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UltimateSkill",
                    "type": "Button",
                    "id": "a3512e22-cf83-479c-ab01-6577ce7648da",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "cd472e6b-7935-42fe-b8a7-91e2770db4d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShortcutNumber1",
                    "type": "PassThrough",
                    "id": "be3cf69b-76a4-4d2b-addc-f2311af69c24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShortcutNumber2",
                    "type": "PassThrough",
                    "id": "66e50c8d-5410-4ac6-842c-7accd43e57ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShortcutNumber3",
                    "type": "PassThrough",
                    "id": "36e004d0-0350-4da9-a24f-3f6d31022b6c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShortcutNumber4",
                    "type": "PassThrough",
                    "id": "1653e273-95da-4107-8a37-acdd621bb5aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShortcutNumber5",
                    "type": "PassThrough",
                    "id": "59819bf7-6622-4fef-8a14-1282d15e4183",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShortcutNumber6",
                    "type": "PassThrough",
                    "id": "589530a1-cf5a-4ed1-a425-7dcb52bd8d29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShortcutNumber7",
                    "type": "PassThrough",
                    "id": "375c3f11-45bb-414e-bcb8-f8490d610b01",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShortcutNumber8",
                    "type": "PassThrough",
                    "id": "622cc494-d72b-44e0-b3a4-ac980dd6e758",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShortcutNumber9",
                    "type": "PassThrough",
                    "id": "48df1304-0c9b-4f65-a904-829f1e747549",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShortcutNumber0",
                    "type": "PassThrough",
                    "id": "b34d8498-758a-4487-b540-d10bee6e5313",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "MoveKey",
                    "id": "69064acc-83e7-4056-8e3d-1d2468d4b710",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d5f831e2-9581-4b46-b292-75d3e3c77659",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "90c60e58-2b4d-48ce-a9ad-d98075186611",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6ba2d840-148a-45d8-8724-e41717fe6dbb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a3874fa0-8832-4b76-a564-69dbfdb4e137",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "402757a3-6efb-483f-b7f4-5b43b2c72c48",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "3a8ace2f-2203-42fd-ac87-af52f6d9e4f4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "ca38c3ca-4843-4ce9-b61d-b0efe9eada98",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a97721b2-b30c-4c04-ae89-d086cc6f1c59",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b31fa0f5-1bba-48ed-8ab0-31e59a624483",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd9f6c61-60b1-4579-865a-ebe72a74f0c0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c5784b7-8157-4ab0-bd79-51a02526ea6c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BaseSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aba4345d-2e0c-44d7-82e0-775bf8a74adb",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UltimateSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "347fc8bc-427e-45ec-8541-3aa6fcb0ecd8",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bc54343-8443-4f5a-ae21-1a86a40fc334",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShortcutNumber1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da5567e1-02a0-4bc8-865a-783fecc2692a",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShortcutNumber2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0ce0091-b6b2-46d7-810c-fe57413fc01c",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShortcutNumber3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0357a03-1d88-497b-a85c-6e26a4e5dd1a",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShortcutNumber4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8094c6fb-ae90-484c-ba9a-0d36b4c9e521",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShortcutNumber5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72002aea-b4b1-490e-b640-4f6169f2e5ee",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShortcutNumber6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef3e2bd6-0b5e-4c2c-99e6-bb2bb066ea5b",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShortcutNumber7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "727debf4-a729-4a91-956b-80d3088344f2",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShortcutNumber8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bd1ef2c-cfe9-47a2-b202-32bbf9bef294",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShortcutNumber9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60f03f77-4bfc-4c1c-8edd-e7c925168a79",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShortcutNumber0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46443412-e426-416f-8f51-8ec83a292348",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bfdc73b-1053-4a85-900a-650b356b4063",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "None",
            "id": "b8dfc5c9-a7e5-41e4-8391-adb0972b96b7",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": []
}